[package]
name = "designer-state"
version = "0.1.1"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "stable", features = ["codegen"] }
designer-io = { path = "../io" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
primitive-types = { version = "0.12", default-features = false }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable", features = ["metawasm"] }
